--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <h5>Watch thousands of shows and movies, with plans starting at $5.99/month.</h5>
             <p>HBO Max™, SHOWTIME®, CINEMAX® and STARZ® available as add-ons.</p>
-            <button>START YOUR FREE TRIAL</button>
+            <a href="#" target="_blank"><button>START YOUR FREE TRIAL</button></a>
             <h4>Free trial for new & eligible returning subscribers only.</h4>
         </div>  
     </div>
@@ -29,7 +29,7 @@
             <h3><a href="#">More Details</a></h3>
         </div>
         <div id="bundlebutton">
-            <button>GET BUNDLE</button>
+            <a href="#" target="_blank"><button>GET BUNDLE</button></a>
             <a href="#"><h4>Terms Apply</h4></a>
         </div>
 
@@ -57,7 +57,120 @@
             </div>
         </div>
     </div>
-
+    <div id="plantable">
+        <table>
+            <tr>
+                <th class="leftaligned"><h1>Select Your Plan</h1>
+                    <br><p>No hidden fees, equipment rentals, or installation appointments.
+                    <br><strong>Switch plans or cancel anytime.**</strong> </p>
+                </th>
+                <th>
+                    <div class="popcontainer">
+                        <div id="pop">
+                            <h6>MOST POPULAR</h6>
+                        </div>
+                    </div>
+                    <h1>Hulu</h1>
+                    <h2>30 DAY FREE TRIAL</h2>
+                    <a href="#" target="_blank"><button>TRY FOR 0$</button></a>
+                </th>
+                <th class="grey"><div class="popcontainer"></div><h1>Hulu (No Ads)</h1>
+                    <h2>30 DAY FREE TRIAL</h2>
+                    <a href="#" target="_blank"><button>TRY FOR 0$</button></a>
+                </th>
+                <th><div class="popcontainer"></div><h1>Hulu + Live TV</h1>
+                    <h2>7 DAY FREE TRIAL</h2>
+                    <a href="#" target="_blank"><button>TRY FOR 0$</button></a>
+                </th>
+            </tr>
+            <tr>
+                <td class="leftaligned">Price after free trial</td>
+                <td>$5.99/mo or $59.99/year</td>
+                <td class="grey">$11.99/mo</td>
+                <td>$54.99/mo***</td>
+            </tr>
+            <tr>
+                <td class="leftaligned">Streaming Library with thousands of TV episodes and movies <img src="assets/Info.svg"></td>
+                <td><img src="assets/Checkmark.svg"></td>
+                <td class="grey"><img src="assets/Checkmark.svg"></td>
+                <td><img src="assets/Checkmark.svg"></td>
+            </tr>
+            <tr>
+                <td class="leftaligned">Most new episodes the day after they air*</td>
+                <td><img src="assets/Checkmark.svg"></td>
+                <td class="grey"><img src="assets/Checkmark.svg"></td>
+                <td><img src="assets/Checkmark.svg"></td>
+            </tr>
+            <tr>
+                <td class="leftaligned">Access to award-winning Hulu Originals</td>
+                <td><img src="assets/Checkmark.svg"></td>
+                <td class="grey"><img src="assets/Checkmark.svg"></td>
+                <td><img src="assets/Checkmark.svg"></td>
+            </tr>
+            <tr>
+                <td class="leftaligned">Watch on your TV, laptop, phone, or tablet</td>
+                <td><img src="assets/Checkmark.svg"></td>
+                <td class="grey"><img src="assets/Checkmark.svg"></td>
+                <td><img src="assets/Checkmark.svg"></td>
+            </tr>
+            <tr>
+                <td class="leftaligned">Up to 6 user profiles <img src="assets/Info.svg"></td>
+                <td><img src="assets/Checkmark.svg"></td>
+                <td class="grey"><img src="assets/Checkmark.svg"></td>
+                <td><img src="assets/Checkmark.svg"></td>
+            </tr>
+            <tr>
+                <td class="leftaligned">Watch on 2 different screens at the same time</td>
+                <td><img src="assets/Checkmark.svg"></td>
+                <td class="grey"><img src="assets/Checkmark.svg"></td>
+                <td><img src="assets/Checkmark.svg"></td>
+            </tr>
+            <tr>
+                <td class="leftaligned">No ads in streaming library <img src="assets/Info.svg"></td>
+                <td><h3>-</h3></td>
+                <td class="grey"><img src="assets/Checkmark.svg"></td>
+                <td><h3>-</h3></td>
+            </tr>
+            <tr>
+                <td class="leftaligned">Download and watch <img src="assets/Info.svg"></td>
+                <td><h3>-</h3></td>
+                <td class="grey"><img src="assets/Checkmark.svg"></td>
+                <td><h3>-</h3></td>
+            </tr>
+            <tr>
+                <td class="leftaligned">Live TV with 65+ top channels. No cable required.<img src="assets/Info.svg"></td>
+                <td><h3>-</h3></td>
+                <td class="grey"><h3>-</h3></td>
+                <td><img src="assets/Checkmark.svg"></td>
+            </tr>
+            <tr>
+                <td class="leftaligned">Live TV guide to navigate channels</td>
+                <td><h3>-</h3></td>
+                <td class="grey"><h3>-</h3></td>
+                <td><img src="assets/Checkmark.svg"></td>
+            </tr>
+            <tr>
+                <td class="leftaligned">Record Live TV with 50 hours of Cloud DVR storage</td>
+                <td><h3>-</h3></td>
+                <td class="grey"><h3>-</h3></td>
+                <td><img src="assets/Checkmark.svg"></td>
+            </tr>
+            <tr>
+                <td class="leftaligned" id="smalltext">*For current-season shows in the streaming library only <br>
+                **Switches from Live TV to Hulu take effect as of the next billing cycle<br>
+                ***Hulu + Live TV’s price will increase to $64.99/month on 12/18/20</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Show Add-Ons <img src="assets/Arrow.svg"></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+    </div>
 
 
     <!-- <div id="imagesection">
